--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 <div id="contact" class="section level2">
 <h2>Contact</h2>
 <ul>
-<li><i class='fa fa-envelope'></i> <a href="mailto:muzhizhou@gmail.com" class="email">muzhizhou@gmail.com</a></li>
+<li><i class='fa fa-envelope'></i> <a href="mailto:muzhi.zhou@sociology.ox.ac.uk" class="email">muzhi.zhou@sociology.ox.ac.uk</a></li>
 <li><i class='fa fa-twitter'></i> jomuzhi</li>
 <li><i class='fa fa-github'></i> github.com/jomuzhi</li>
 <li><i class='fa fa-map-marker'></i> Department of Sociology, University of Oxford, 42-43 Park End Street, Oxford, Oxfordshire, OX1 1JD, England</li>
